/*
 * Copyright (C) 2011 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not
 * use this file except in compliance with the License. You may obtain a copy of
 * the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations under
 * the License.
 */

/* Shift to mavenCentral apache artifacts (currently rosajva_mvn_repo) when ready
 * Currently we have conflicts when dexing android executables since there is a
 * mix of mavenCentral/springsource providers.
 *
 *   https://github.com/rosjava/rosjava_bootstrap/issues/40#issuecomment-75043854
 */

plugins{
  id 'application'
  id 'java-library'
}


//noinspection GroovyAssignabilityCheck
dependencies {
  implementation 'io.netty:netty:3.10.6.Final'
  implementation 'com.google.guava:guava:31.1-jre'
  implementation 'commons-codec:commons-codec:1.15'
  implementation 'commons-io:commons-io:2.11.0'
  implementation 'commons-pool:commons-pool:1.6'
  implementation 'org.apache.commons:commons-lang3:3.12.0'
  implementation 'org.apache.commons:commons-text:1.9'
//  implementation project(':gradle_plugins')
  testImplementation 'junit:junit:4.13.2'
}

compileJava {
  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17
}
java {
  withSourcesJar()
  withJavadocJar()
}


//noinspection GroovyUnusedAssignment
mainClassName = "org.ros.internal.message.GenerateInterfaces"
